Trying to fix contact form window on smaller screens

--- a/style.css
+++ b/style.css
@@ -421,8 +421,7 @@ body {
     margin-left: 12.5vw;
     width: 30vw;
     max-width: 100%;
-    min-height: 60vh;
-    height: 70vh;
+    height: 65vh;
     padding-bottom: 1%;
     justify-content: space-evenly;
     overflow-y: auto;
